// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlchemyIntegrationModal.vue Should display a message if you are not in an Alchemy workspace 1`] = `
<div class="v-dialog__container">
  <div role="dialog" aria-modal="true" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div tabindex="0" class="v-dialog v-dialog--active v-dialog--persistent" style="transform-origin: center center; max-width: 700px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Manage Alchemy Integration</div>
          <div class="v-card__text">
            When enabled, this integration will give you a webhook that you should add in your Alchemy dashboard, in the Notify section, under "Mined Transactions Notifications". Once this is done, all transactions going through the selected Alchemy app will be synchronized with Ethernal, letting you used all of the features on your dapp!
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
            <div class="mt-1">
              <div role="alert" class="v-alert v-sheet theme--dark warning">
                <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-exclamation theme--dark"></i>
                  <div class="v-alert__content">This integration can only be used with a workspace connected to an Alchemy endpoint. Create a new workspace connected to your Alchemy app to use it</div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`AlchemyIntegrationModal.vue Should let you disable a webhook 1`] = `
<div class="v-dialog__container">
  <div role="dialog" aria-modal="true" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div tabindex="0" class="v-dialog v-dialog--active v-dialog--persistent" style="transform-origin: center center; max-width: 700px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Manage Alchemy Integration</div>
          <div class="v-card__text">
            When enabled, this integration will give you a webhook that you should add in your Alchemy dashboard, in the Notify section, under "Mined Transactions Notifications". Once this is done, all transactions going through the selected Alchemy app will be synchronized with Ethernal, letting you used all of the features on your dapp!
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
            <div>
              <div class="v-input theme--light v-input--selection-controls v-input--switch">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <div class="v-input--selection-controls__input"><input aria-checked="false" id="webhookSwitch" role="switch" type="checkbox" aria-disabled="false" value="">
                      <div class="v-input--selection-controls__ripple"></div>
                      <div class="v-input--switch__track theme--light"></div>
                      <div class="v-input--switch__thumb theme--light">
                        <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                      </div>
                    </div><label for="webhookSwitch" class="v-label theme--light" style="left: 0px; position: relative;">Disabled</label>
                  </div>
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
              <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined" style="display: none;">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: 0px;"><span class="notranslate">​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><input id="webhook" readonly="readonly" type="text"></div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append"><button type="button" aria-label="append icon" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light"></button></div>
                    </div>
                  </div>
                </div>
              </div> <input type="hidden" id="copyElement" value="http://localhost:8081/webhooks/alchemy?token=null">
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`AlchemyIntegrationModal.vue Should let you enable a webhook 1`] = `
<div class="v-dialog__container">
  <div role="dialog" aria-modal="true" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div tabindex="0" class="v-dialog v-dialog--active v-dialog--persistent" style="transform-origin: center center; max-width: 700px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Manage Alchemy Integration</div>
          <div class="v-card__text">
            When enabled, this integration will give you a webhook that you should add in your Alchemy dashboard, in the Notify section, under "Mined Transactions Notifications". Once this is done, all transactions going through the selected Alchemy app will be synchronized with Ethernal, letting you used all of the features on your dapp!
            <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
            <div>
              <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--switch primary--text">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <div class="v-input--selection-controls__input"><input aria-checked="true" id="webhookSwitch" role="switch" type="checkbox" aria-disabled="false" value="">
                      <div class="v-input--selection-controls__ripple primary--text"></div>
                      <div class="v-input--switch__track theme--light primary--text"></div>
                      <div class="v-input--switch__thumb theme--light primary--text">
                        <transition-stub name="fab-transition" mode="out-in"></transition-stub>
                      </div>
                    </div><label for="webhookSwitch" class="v-label theme--light" style="left: 0px; position: relative;">Enabled</label>
                  </div>
                  <div class="v-messages theme--light primary--text">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
              <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined" style="">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <fieldset aria-hidden="true">
                      <legend style="width: 0px;"><span class="notranslate">​</span></legend>
                    </fieldset>
                    <div class="v-text-field__slot"><input id="webhook" readonly="readonly" type="text"></div>
                    <div class="v-input__append-inner">
                      <div class="v-input__icon v-input__icon--append"><button type="button" aria-label="append icon" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light"></button></div>
                    </div>
                  </div>
                </div>
              </div> <input type="hidden" id="copyElement" value="http://localhost:8081/webhooks/alchemy?token=123456abcdef">
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;
